# TriangleFractals

./: .gitignore  Makefile  README.md  flake.nix  fractal.c  fractal.h  main.c  meson.build  sdl2.h  triangle
src/: main.c  meson.build
